objects/Partner_Program_Enrollment__c.object
<CustomObject>
    <fields>
        <fullName>BE_GEO_ID__c</fullName>
        <description>Partner company's PGTMV BE GEO ID</description>
        <label>BE GEO ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROGRAM_UN_ID__c</fullName>
        <description>Partner Program unique ID (authorisation that requires PPE enrollment)</description>
        <externalId>true</externalId>
        <label>PROGRAM_UN_ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Partner_Company__c</fullName>
        <description>Partner BE GEO name</description>
        <label>Partner Company</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner Company</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Program Enrollments</relationshipLabel>
        <relationshipName>Partner_Program_Enrollments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Program_Effective_Date__c</fullName>
        <description>Program start date</description>
        <label>Program Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Enrollment_Status__c</fullName>
        <description>Indicates if Active or Inactive</description>
        <label>Program Enrollment Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Program_Expiration_Date__c</fullName>
        <description>Program Expiry date</description>
        <label>Program Expiration Date</label>
        <type>Date</type>
    </fields>
    <customHelpPage>HelpPartnerProgramEnrollment</customHelpPage>
    <description>This object stores details of the programs enrolled by the partner.</description>
    <label>Partner Program Enrollment</label>
    <nameField>
        <label>Partner Program/Track Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Program Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Program_Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Enrollment_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>